salesforce/force-app/main/default/objects/OrgIQ_Enterprise__c/fields/External_Enterprise_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Enterprise_Id__c</fullName>
    <description>Stable id for the tenant. Every scan carries a copy of this so a query can be scoped without a join, and every read path in this repository is required by test to carry that predicate.</description>
    <externalId>true</externalId>
    <label>External Enterprise Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>