salesforce/force-app/main/default/objects/OrgIQ_Enterprise__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>What this enterprise does. The rule packs are industry-agnostic; this is context for whoever reads the estate.</description>
    <label>Industry</label>
    <length>80</length>
    <type>Text</type>
</CustomField>