salesforce/force-app/main/default/objects/OrgIQ_Enterprise__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Anything about the estate a reader needs before interpreting its scores.</description>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>